# tlpi_solution

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
file/: CMakeLists.txt  copy.c  cp_hollow_file.c  file_test.c  input.txt  large_file.c  my_dup.c  my_dup2.c  my_tee.c  output.txt  t_readv.c  tail.c
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
process/: CMakeLists.txt  footprint.c  fork_file_sharing.c  fork_sig_sync.c  fork_whos_on_first.c  process_test.c  t_fork.c  t_vfork.c  vfork_fd_test.c
signals/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  my_abort.c  rtsignal_sequence.c  sig_continue.c  sig_ignore.c  sig_receiver.c  sig_sender.c  signals
threads/: CMakeLists.txt  simple_thread.c  thread_incr.c  thread_test.c
time/: CMakeLists.txt  Makefile  cmake_install.cmake  curr_time.c
timer/: CMakeLists.txt  cmake_install.cmake  itimerspec_from_str.c  my_alarm.c  ptmr_sigev_signal.c  real_timer.c  t_nanosleep.c
